[gd_scene load_steps=8 format=3 uid="uid://d2it13rrnwyo3"]

[ext_resource type="Script" uid="uid://epb2qtnks13j" path="res://Cenas/LightArmor/Bullet/bullet.gd" id="1_fcnqo"]
[ext_resource type="Texture2D" uid="uid://cybjamgolcp2e" path="res://icon.svg" id="2_bdpod"]

[sub_resource type="SpriteFrames" id="SpriteFrames_22dnr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bdpod")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcnqo"]
size = Vector2(4.5, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_fcnqo"]
radius = 20.0

[sub_resource type="Gradient" id="Gradient_fcnqo"]
offsets = PackedFloat32Array(0.133971, 0.23445, 1)
colors = PackedColorArray(1, 0.92, 0.7, 0.776471, 1, 0.92, 0.7, 0.529412, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bdpod"]
gradient = SubResource("Gradient_fcnqo")
fill = 1
fill_from = Vector2(0.495726, 0.498576)
fill_to = Vector2(0.108262, 0.80057)

[node name="FairyBullet" type="Area2D" node_paths=PackedStringArray("light", "timer_to_exit")]
script = ExtResource("1_fcnqo")
light = NodePath("Light")
timer_to_exit = NodePath("TimerToExit")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4.76837e-07, 4.76837e-07)
scale = Vector2(0.0339737, 0.13826)
sprite_frames = SubResource("SpriteFrames_22dnr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fcnqo")

[node name="Light" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light"]
shape = SubResource("CircleShape2D_fcnqo")

[node name="Sprite2D" type="Sprite2D" parent="Light"]
texture = SubResource("GradientTexture2D_bdpod")

[node name="TimerToExit" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Light" to="." method="_insert_ene_on_list"]
[connection signal="body_exited" from="Light" to="." method="_delete_ene_on_list"]
[connection signal="timeout" from="TimerToExit" to="." method="_free"]
